# WikiTaxonomy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose-app.yml  pyproject.toml  requirements.txt
src/: __init__.py  api_entrypoint_main.py  app_dashboard_entrypoint.py  main.py
src/api/: __init__.py  api_models.py  cache_results_router.py  inference_router.py  preprocess.py
src/configs/: bert_classifier.yaml  tfidf_logistic_classifier.yaml
src/data/: wiki_taxonomy_data_module.py  wiki_taxonomy_dataset.py
src/frontend/: __init__.py  app_design.py
src/model/: logistic_classifier.py  wiki_taxonomy_classifier.py
src/notebooks/: DataExploration.ipynb
src/pipelines/: __init__.py  base.py  evaluate.py  inference.py  preprocessing.py  train.py
src/settings/: general.py
src/utils/: utils.py
