[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Diogo Matias <diogo.pomatias@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
mypy = "^1.5.1"
notebook = "^7.2.2"
pandas = "^2.1.0"
matplotlib = "^3.7.3"
transformers = "^4.48.0"
pre-commit = "^3.4.0"
torch = "^2.0.1"
lightning = "^2.3.3"
scikit-learn = "^1.3.0"
tensorboardx = "^2.6.2.2"
torchvision = "^0.15.2"
nltk = "^3.8.1"
numpy = "1.24.4"
torchmetrics = "^1.1.2"
pydantic = "2.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.11"
streamlit = "^1.37.0"
seaborn = "^0.12.2"
mpld3 = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
